V0.5.7
* Added some placeholders as constants
v0.4.8
* Fixed ticket 684 - location cant be checked on saving reward blocks: https://github.com/Rocologo/MobHunting/issues/684 
v0.4.5
* Added support for RGB colours in lang file
* Fixed NPE bug when saving bounties
* Fixed support with StackMob
V0.2.3, 09-05-2020
* Messages added
V0.2.2, 02-05-2020
* ConfigManagerShared added
* Core.class added
V0.2.1
* Minecraft 1.15.2 Release
V0.2.0
* Minecraft 1.15.1 Release
V0.1.0
* Fixed bug when worldgroups.yml is created first time
* Added Support for Minecraft 1.12 
V0.0.6
* Forced download added
V0.0.5
* Tools added
* Materials added
* Servers added